fix patterns filter overflow

--- a/packages/block-editor/src/components/tool-selector/style.scss
+++ b/packages/block-editor/src/components/tool-selector/style.scss
@@ -1,8 +1,4 @@
 .block-editor-tool-selector__help {
-	margin-top: $grid-unit-10;
-	margin-left: -$grid-unit-10;
-	margin-right: -$grid-unit-10;
-	margin-bottom: -$grid-unit-10;
 	padding: $grid-unit-20;
 	border-top: $border-width solid $gray-300;
 	color: $gray-700;
